# iBASS-SDL

./: .gitignore  CMakeLists.txt  FILES.md  README.md  TODO.md  iBASS_fake.cpp  main.cpp  standalone_main.cpp
common/: file.cpp  file.h  scummsys.h  system.h
ext/: cute_png.cpp  cute_png.h
gui/: asciiData.cpp  asciiData.h  panel.h  panelMan.cpp  panelMan.h
gui/panels/: audio.cpp  audio.h  control.cpp  control.h  death.cpp  death.h  language.cpp  language.h  load.cpp  load.h  save.cpp  save.h  start.cpp  start.h
iBASS/: Info.plist  ascii.h  ascii.mm  audio_panel.h  audio_panel.mm  control_panel.h  control_panel.mm  death_panel.h  death_panel.mm  help_panel.h  help_panel.mm  hint_panel.h  hint_panel.mm  iBASSAppDelegate.h  iBASSAppDelegate.mm  iBASS_Prefix.pch  instruct_panel.h  instruct_panel.mm  iphone_common.h  iphone_util.h  iphone_util.m  lang_panel.h  lang_panel.mm  load_panel.h  load_panel.mm  main.mm  save_panel.h  save_panel.mm  start_panel.h  start_panel.mm  twitter_panel.h  twitter_panel.mm
iBASS/iBASS.xcodeproj/: project.pbxproj
old/: othsys_opengl.cpp  othsys_opengl.h  standalone_main.cpp
sky/: autoroute.cpp  autoroute.h  compact.cpp  compact.h  disk.cpp  disk.h  grid.cpp  grid.h  hufftext.cpp  inventory.cpp  logic.cpp  logic.h  mouse.cpp  mouse.h  music.cpp  music.h  pack-end.h  pack-start.h  saveload.cpp  saveload.h  screen.cpp  screen.h  sky.cpp  sky.h  skydefs.h  sound.cpp  sound.h  struc.h  text.cpp  text.h
system/: caffile.cpp  common.cpp  common.h  file.cpp  ima4.cpp  othsys.h  othsys_sdl.cpp  othsys_sdl.h  random.cpp  random.h  savefile.cpp  savefile.h  types.h
tools/: invtex.py  uitex.py
